--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.4.0",
+    "react-image-gallery": "^1.2.9",
     "react-loader-spinner": "^5.1.5",
     "react-owl-carousel": "^2.3.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.5",
-    "recharts": "^2.1.12",
+    "recharts": "^2.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
