--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "daisyui": "^2.24.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "formik": "^2.2.9",
     "jodit-react": "^1.3.13",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.9",
     "react-loader-spinner": "^5.1.5",
     "react-owl-carousel": "^2.3.3",
+    "react-profile-card": "^0.1.4",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.5",
     "recharts": "^2.1.14",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
